apps/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.tajudeen.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend: 
              service:
                name: prometheus
                port:
                  number: 443
